new page added as mypost.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
        <script src="app/editprofile/controller/controller.js"></script>
        <script src="app/feedback/controller/controller.js"></script>
        <script src="app/unionpost/controller/controller.js"></script>
+       <script src="app/mypost/controller/controller.js"></script>
        <script src="app/notifications/controller/controller.js"></script>
 
      <!-- Services -->
