change password page added.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
        <script src="app/seriestimetable/controller/controller.js"></script>
        <script src="app/sylabus/controller/controller.js"></script>
        <script src="app/editprofile/controller/controller.js"></script>
+       <script src="app/changepassword/controller/controller.js"></script>
        <script src="app/feedback/controller/controller.js"></script>
        <script src="app/unionpost/controller/controller.js"></script>
        <script src="app/mypost/controller/controller.js"></script>
