--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="app/shared/controller/Headercontroller.js"></script>
      <script src="app/homedetail/controller/controller.js"></script>
        <script src="app/login/controller/controller.js"></script>
+       <script src="app/login/controller/ForgotPasswordController.js"></script>
        <script src="app/timetable/controller/controller.js"></script>
        <script src="app/seriestimetable/controller/controller.js"></script>
        <script src="app/sylabus/controller/controller.js"></script>
