Side menu changed. APK added.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="app/settings/controller/controller.js"></script>
     
     <script src="app/shared/controller/Headercontroller.js"></script>
+    <script src="app/shared/controller/SidebarController.js"></script>
      <script src="app/homedetail/controller/controller.js"></script>
        <script src="app/login/controller/controller.js"></script>
        <script src="app/login/controller/ForgotPasswordController.js"></script>
